Add OnJava examples.